feat(change): coin 별 개수를 반환하는 기능 구현